feat: implement Healthy Report Import V0
